# codewars

./: .clang-format__  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  duplicate_encoder.cpp
.github/workflows/: cmake.yml
backspaces_in_string/: CMakeLists.txt  README.md  backspaces_in_string.cpp  backspaces_in_string_test.cpp
consecutive_strings/: CMakeLists.txt  ConsecutiveStrings.cpp  ConsecutiveStrings_Test.cpp  README.md
counting_duplicates/: CMakeLists.txt  README.md  duplicate.cpp  duplicate_test.cpp
direction_reduction/: CMakeLists.txt  README.md  dir_reduction.cpp  dir_reduction_test.cpp
equal_sides_of_an_array/: CMakeLists.txt  EqualSidesOfAnArray.cpp  README.md
find_the_odd_int/: CMakeLists.txt  FindOdd.cpp  FindOdd_Test.cpp  README.md
hanoi_record/: CMakeLists.txt  Hanoi.cpp  README.md
higest_scoring_word/: CMakeLists.txt  README.md  higest_scores_words.cpp  higest_scores_words_test.cpp
include/CodeWars/: BackspacesInString.hpp  ConsecutiveStrings.hpp  CountingDuplicates.hpp  DirectionReduction.hpp  EqualSidesOfAnArray.hpp  FindOddInt.hpp  FindTheParityOutlier.hpp  HanoiRecord.hpp  HigestScoringWord.hpp  MorseCode.hpp  MultiplicationTable.hpp  NarcissicNumber.hpp  SumOfNumbers.hpp  TakeTenMinutesWalk.hpp  TortoiseRace.hpp  WhoLikeThis.hpp
morse_code/: CMakeLists.txt  README.md  morse.cpp  morse_test.cpp
multiplication_table/: CMakeLists.txt  README.md  table.cpp  table_test.cpp
narcissic_numbers/: CMakeLists.txt  NarcissicNumber.cpp  NarcissicNumber_Test.cpp  README.md
parity_outlier/: CMakeLists.txt  README.md  main.cpp
sum_of_numbers/: CMakeLists.txt  README.md  SumOfNumbers.cpp
take_ten_minutes_walk/: CMakeLists.txt  README.md  walk.cpp  walk_test.cpp
test/: CMakeLists.txt  equal_sides_of_an_array.cpp  hanoi_record.cpp  parity_outlier.cpp  sum_of_numbers.cpp  wholikethis_test.cpp
tortoise_race/: CMakeLists.txt  README.md  TortoiseRace.cpp  TortoiseRace_Test.cpp
wholikethis/: CMakeLists.txt  README.md  main.cpp  wholikethis.cpp
wholikethis/lib/: wholikethis.cpp
